2011-09-25  Adam Barth  <abarth@webkit.org>

        Finish removing PLATFORM(BREWMP) by removing associated code
        https://bugs.webkit.org/show_bug.cgi?id=68779

        Reviewed by Sam Weinig.

        * Scripts/webkitpy/common/config/build.py:
        * waf/build/settings.py:

2011-09-21  Ai Makabi  <makabi@google.com>

        Provides a simple LRU cache class in Python.

        https://bugs.webkit.org/show_bug.cgi?id=67823

        Reviewed by Tony Chang.

        * Scripts/webkitpy/common/lru_cache.py:
        * Scripts/webkitpy/common/lru_cache_unittest.py:

2011-09-25  Adam Barth  <abarth@webkit.org>

        Remove PLATFORM(HAIKU) and associated code
        https://bugs.webkit.org/show_bug.cgi?id=68774

        Reviewed by Sam Weinig.

        * Scripts/webkitpy/common/config/build.py:
        * waf/build/settings.py:

2011-09-24  Adam Barth  <abarth@webkit.org>

        Always enable ENABLE(OFFLINE_WEB_APPLICATIONS)
        https://bugs.webkit.org/show_bug.cgi?id=68767

        Reviewed by Eric Seidel.

        * Scripts/build-webkit:

2011-09-24  Adam Barth  <abarth@webkit.org>

        Remove ENABLE(WCSS) and associated code
        https://bugs.webkit.org/show_bug.cgi?id=68759

        Reviewed by Darin Adler.

        * Scripts/build-webkit:
        * Scripts/old-run-webkit-tests:
        * Scripts/webkitperl/features.pm:
        (hasFeature):
        * Scripts/webkitpy/layout_tests/port/webkit.py:
        * Scripts/webkitpy/layout_tests/port/webkit_unittest.py:

2011-09-24  Alejandro G. Castro  <alex@igalia.com>

        Fixed GTK compilation after r95878, the operator== was defined
        twice when USE_WEBPROCESS_EVENT_SIMULATION is defined.

        * WebKitTestRunner/InjectedBundle/EventSendingController.cpp:

2011-09-23  Raphael Kubo da Costa  <kubo@profusion.mobi>

        [DRT] Include the right config file for EFL's DRT.
        https://bugs.webkit.org/show_bug.cgi?id=67042

        Reviewed by Martin Robinson.
